--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="styleheet" href="css/style.css" type="text/css">
 </head>
 <body>
-	<h1> Добро пожаловать на мой сайт!</h1>
+	<h1> Тут ты можешь пустить шептуна для Еклифа!</h1>
 </body>
 </html>
