--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="CSS/styles.css" >
 </head>
 <body>
-	<h1> Тут ты можешь пустить шептуна </h1>
+	<h1> Тут ты можешь пустить шептуна для Еклифа!  </h1>
 </body>
 </html>
