--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="CSS/styles.css">
 </head>
 <body>
+	<img src="img/фульфрина.jpeg>
 	<h1> Тут ты можешь пустить шептуна для Еклифа!  </h1>
 </body>
 </html>
