--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="CSS/styles.css">
 </head>
 <body>
-	<form><label>Введите имя</label><input type="text"></form>
+	<form><label>Введите текст сообщения</label><input type="text"></form>
 	<h1> Тут ты можешь пустить шептуна для Еклифа!  </h1>
 </body>
 </html>
