--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h1> Тут ты можешь пустить шептуна для Еклифа!  </h1>
 </head>
 <body>
+	<input type="text" id="text" name="Введите Имя">
 	<input type="text" id="text" name="Введите сообщение">
 </body>
 </html>
