--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <h1> Тут ты можешь пустить шептуна для Еклифа!  </h1>
 </head>
 <body>
-	<input type="text" id="text" name="Введите Имя">
+	<label for='username'>Имя пользователя:</label>
+	<input type="text" id="text" name="username">
 	<input type="text" id="text" name="Введите сообщение">
 </body>
 </html>
