--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <h1> Тут ты можешь пустить шептуна для Еклифа!  </h1>
 </head>
 <body>
+	<div class="field">
 	<label for='username'>Имя пользователя:</label>
 	<input type="text" id="text" name="username">
-	<input type="text" id="text" name="Введите сообщение">
+	</div>
+	<div class="field">
+	<label for='inputtext'>Введите сообщение:</label>
+	<input type="text" id="text" name="inputtext">
+	</div>
 </body>
 </html>
