--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	
 	<div class="field">
 	<label for='inputtext'>Введите сообщение:</label>
-	<input type="text" id="text" name="inputtext">
+	<input type="text1" id="text" name="inputtext">
 </div>
 </body>
 </html>
