--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 </div>
 	
 	<div class="field">
-	<label for='inputtext'>Введите сообщение:</label>
-	<input type="text1" id="text" name="inputtext">
+	<label for='feedback'>Введите сообщение:</label>
+	<textarea id='feedback' name='feedback' rows='4' cols='50'>
+	</textarea>
 </div>
 </body>
 </html>
