--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<label for='feedback'>Введите сообщение:</label>
 	<textarea id='feedback' name='feedback' rows='4' cols='50'>
 	</textarea>
+	<button class="submit" type="submit">Пустить шептуна</button>
 </div>
 </body>
 </html>
