--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
     <h1> Тут ты можешь пустить шептуна для Еклифа!  </h1>
 </head>
 <body>
-	<div class="field">
-	<label for='username'>Имя пользователя:</label>
-	<input type="text" id="text" name="username">
-</div>
-	
-	<div class="field">
-	<label for='feedback'>Введите сообщение:</label>
-	<textarea id='feedback' name='feedback' rows='4' cols='50'>
-	</textarea>
-	<button class="submit" type="submit">Пустить шептуна</button>
+	<form>
+		<label for='username'>Имя пользователя:</label>
+		<input type="text" id="text" name="username">
+		<label for='feedback'>Введите сообщение:</label>
+		<textarea id='feedback' name='feedback' rows='4' cols='50'>
+		</textarea>
+		<button class="submit" type="submit">Пустить шептуна</button>
+	</form>
 </div>
 </body>
 </html>
