--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<textarea id='feedback' name='feedback' rows='4' cols='50'>
 		</textarea>
 		<button class="submit" type="submit">Пустить шептуна</button>
+	</form>	
+	<form>	
 		<textarea id='feedback1' name='feedback1' rows='4' cols='50'>
 		</textarea>
 	</form>
