--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 		</textarea>
 		<button class="submit" type="submit">Пустить шептуна</button>
 	</form>	
-	<form>	
+	<div class="form-control">	
 		<textarea id='feedback1' name='feedback1' rows='4' cols='50'>
 		</textarea>
-	</form>
+	</div>
 </div>
 </body>
 </html>
