--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 		</textarea>
 		<button class="submit" type="submit">Пустить шептуна</button>
 	</form>	
-	<div class="form-control" id="feedback1">	
+	<div class="form-control" id="feedback1">
+		<div style="margin-top: 10px;"></div>
 		<textarea id='feedback1' name='feedback1' rows='4' cols='50'>
 		</textarea>
 	</div>
