--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<label for='feedback'>Введите сообщение:</label>
 		<textarea id='feedback' name='feedback' rows='4' cols='50'>
 		</textarea>
+		<a href="index2.html"> Пустить шептуна</a>
 		<button class="submit" type="submit">Пустить шептуна</button>
 	</form>	
 	<div class="form-control" id="feedback1">
