--- a/index2.html
+++ b/index2.html
@@ -6,3 +6,21 @@
     <link rel="stylesheet" type="text/css" href="CSS/styles.css">
     <h1> Тут ты можешь пустить шептуна для Еклифа!  </h1>
 </head>
+<body>
+	<form>
+		<label for='username'>Имя пользователя:</label>
+		<input type="text" id="text" name="username">
+		<label for='feedback'>Введите сообщение:</label>
+		<textarea id='feedback' name='feedback' rows='4' cols='50'>
+		</textarea>
+		<a href="index2.html"> Пустить шептуна</a>
+		<button class="submit" type="submit">Пустить шептуна</button>
+	</form>	
+	<div class="form-control" id="feedback1">
+		<div style="margin-top: 50px;"></div>
+		<textarea id='feedback1' name='feedback1' rows='4' cols='50'>
+		</textarea>
+	</div>
+</div>
+</body>
+</html>
