--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 	<form>
-		<a href="index2.html"> Пустить шептуна</a>
-		<button class="submit" type="submit">Пустить шептуна</button>
+		<form action="index2.html">
+		<input type="submit" value="Пустить шептуна"/>
 	</form>	
 
 </body>
