--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<form>
-		<form action="https://eklif.github.io/index2.html">
+		<form action="index2.html">
 		<input type="submit" value="Пустить шептуна"/>
 	</form>	
 
