--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 	<form>
-		<form action="index2.html">
-		<input type="submit" value="Пустить шептуна"/>
+		<a href="index2.html" class="button-class">
+		Пустить шептуна </a>
 	</form>	
 
 </body>
