--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
 	<form>
-		<a href="index2.html" class="button-class">
-		Пустить шептуна </a>
+		<button><a href="index2.html"> Пуститть шептуна </a></button>
 	</form>	
 
 </body>
