--- a/index2.html
+++ b/index2.html
@@ -13,6 +13,7 @@
 		<label for='feedback'>Введите сообщение:</label>
 		<textarea id='feedback' name='feedback' rows='4' cols='50'>
 		</textarea>
+		<button type="button">Отправить сообщение</button>
 	</form>	
 	<div class="form-control" id="feedback1">
 		<div style="margin-top: 50px;"></div>
