--- a/index2.html
+++ b/index2.html
@@ -14,6 +14,7 @@
 		<textarea id='feedback' name='feedback' rows='4' cols='50'>
 		</textarea>
 		<button type="button">Отправить сообщение</button>
+		<input tupe="button" value="Отправить сообщение">
 	</form>	
 	<div class="form-control" id="feedback1">
 		<div style="margin-top: 50px;"></div>
