--- a/index2.html
+++ b/index2.html
@@ -13,13 +13,13 @@
 		<label for='feedback'>Введите сообщение:</label>
 		<textarea id='feedback' name='feedback' rows='4' cols='50'>
 		</textarea>
-		<button type="button">Отправить сообщение</button>
+		<button id="button">Отправить сообщение</button>
 		<input tupe="button" </input>
 	</form>	
 	<script>
 		// захватим UI-элементы для работы с ними
 		const textEl = document.getElementById('feedback');
-		const speakEl = document.getElementById('speak');
+		const speakEl = document.getElementById('button');
 
 		// перехватим клик по кнопке
 		speakEl.addEventListener('click', speakText);
