--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
     <h1> Тут ты можешь пустить шептуна для Еклифа!  </h1>
 </head>
 <body>
-	<form>
+	<div class="TTT">
 		<label for='username'>Имя пользователя:</label>
 		<input type="text" id="text" name="username">
 		<label for='feedback'>Введите сообщение:</label>
@@ -15,7 +15,7 @@
 		</textarea>
 		<button id="button">Отправить сообщение</button>
 		<input tupe="button" </input>
-	</form>	
+	</div>	
 	<script>
 		// захватим UI-элементы для работы с ними
 		const textEl = document.getElementById('feedback');
