--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,7 @@
 	</form>	
 	<script>
 		// захватим UI-элементы для работы с ними
-		const textEl = document.getElementById('ext','feedback');
+		const textEl = document.getElementById('feedback');
 		const speakEl = document.getElementById('button');
 
 		// перехватим клик по кнопке
