--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
 <body>
 	<form>
 		<label for='username'>Имя пользователя:</label>
-		<input type="text" id="ext" name="username">
+		<input type="text" id="text" name="username">
 		<label for='feedback'>Введите сообщение:</label>
 		<textarea id='feedback' name='feedback' rows='4' cols='50'>
 		</textarea>
