--- a/index2.html
+++ b/index2.html
@@ -18,10 +18,7 @@
 	</form>	
 	<script>
 		// захватим UI-элементы для работы с ними
-		let yy = document.getElementById('feedback');
-		let mm = document.getElementById('ext');
-		let dd = document.getElementById('joint').value =mm+yy;
-		const textEl = document.getElementById('dd');
+		const textEl = document.getElementById('feedback');
 		const speakEl = document.getElementById('button');
 
 		// перехватим клик по кнопке
