--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,7 @@
 	<script>
 		// захватим UI-элементы для работы с ними
 		
-		const textEl = document.querySelectorAll('feedback, ext');
+		const textEl = document.querySelectorAll('#idfeedback, #idext');
 		const speakEl = document.getElementById('button');
 
 		// перехватим клик по кнопке
