--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
 <body>
 	<form>
 		<label for='username'>Имя пользователя:</label>
-		<input type="text" id="" name="username">
+		<input type="text" id="ext" name="username">
 		<label for='feedback'>Введите сообщение:</label>
 		<textarea id='feedback' name='feedback' rows='4' cols='50'>
 		</textarea>
@@ -19,7 +19,7 @@
 	<script>
 		// захватим UI-элементы для работы с ними
 		
-		const textEl = document.querySelectorAll('#id feedback, #id ext');
+		const textEl = document.getElementById('ext');
 		const speakEl = document.getElementById('button');
 
 		// перехватим клик по кнопке
