--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,9 @@
 	<script>
 		// захватим UI-элементы для работы с ними
 		
-		const textEl = document.getElementById('ext');
+		const textE3 = document.getElementById('ext');
+		const textE2 = document.getElementById('feedback');
+		const textEl =textE3+textE2
 		const speakEl = document.getElementById('button');
 
 		// перехватим клик по кнопке
