--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,7 @@
 		
 		const textE3 = document.getElementById('ext');
 		const textE2 = document.getElementById('feedback');
-		const textEl =textE3.value +textE2.value
+		const textEl =textE3.value +textE2.value;
 		const speakEl = document.getElementById('button');
 
 		// перехватим клик по кнопке
