--- a/index2.html
+++ b/index2.html
@@ -19,9 +19,9 @@
 	<script>
 		// захватим UI-элементы для работы с ними
 		
-		const textE3 = document.getElementById('ext');
-		const textE2 = document.getElementById('feedback');
-		const textEl =textE3.value +textE2.value;
+		const textE3 = document.getElementById('ext').value;
+		const textE2 = document.getElementById('feedback').value;
+		const textEl ="textE3" +"textE2";
 		const speakEl = document.getElementById('button');
 
 		// перехватим клик по кнопке
