--- a/index2.html
+++ b/index2.html
@@ -26,7 +26,7 @@ function join_ym()
 }
 		// захватим UI-элементы для работы с ними
 		
-		const textE1 = document.getElementById("join_ym").value;
+		const textE1 = document.getElementById("join_ym()").value;
 		const speakEl = document.getElementById('button');
 
 		// перехватим клик по кнопке
