--- a/index2.html
+++ b/index2.html
@@ -22,7 +22,8 @@ function join_ym()
 {
 	const УУ = document.getElementById("ext").value;
 	const MM =document.getElementById("feedback").value
-	document.getElementById('joint').value = YY+MM;
+	document.getElementById('joint').value = УУ+MM;
+	alert(document.getElementById('joint').value);
 }
 		// захватим UI-элементы для работы с ними
 		
