--- a/index2.html
+++ b/index2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+$<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -21,7 +21,7 @@
 function join_ym()
 {
 	const УУ = document.getElementById("ext").value;
-	const MM =document.getElementById("feedback").value
+	const MM =document.getElementById("feedback").value;
 	document.getElementById('joint').value = УУ+MM;
 	alert(document.getElementById('joint').value);
 }
