--- a/index2.html
+++ b/index2.html
@@ -1,4 +1,4 @@
-$<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -18,13 +18,13 @@ $<!DOCTYPE html>
 	</form>	
 
 	<script>
-function join_ym()
-{
+        function join_ym()
+        {
 	const УУ = document.getElementById("ext").value;
 	const MM =document.getElementById("feedback").value;
 	document.getElementById('joint').value = УУ+MM;
 	alert(document.getElementById('joint').value);
-}
+        }
 		// захватим UI-элементы для работы с ними
 		
 		const textE1 = document.getElementById("join_ym()").value;
