--- a/index2.html
+++ b/index2.html
@@ -15,6 +15,8 @@
 		</textarea>
 		<button id="button">Отправить сообщение</button>
 		<input tupe="button" </input>
+		<button id="button2">Проверка </button>
+		<button2.addEventListener('click', join_ym);
 	</form>	
 
 	<script>
