--- a/index2.html
+++ b/index2.html
@@ -23,10 +23,7 @@
 	document.getElementById('myButton').onclick = join_ym;	
         function join_ym()
         {
-	const УУ = document.getElementById("ext").value;
-	const MM =document.getElementById("feedback").value;
-	document.getElementById('joint').value = УУ+MM;
-	alert(document.getElementById('joint').value);
+	alert("ПРОВЕРКА");
         }
 		// захватим UI-элементы для работы с ними
 		
