--- a/index2.html
+++ b/index2.html
@@ -21,9 +21,8 @@
 
 	<script>
 	document.getElementById('myButton').onclick = join_ym;	
-        function join_ym()
-        {
-	alert("ПРОВЕРКА");
+        function join_ym() {
+	 alert("ПРОВЕРКА");
         }
 		// захватим UI-элементы для работы с ними
 		
