--- a/index2.html
+++ b/index2.html
@@ -22,10 +22,10 @@
 	<script>
 	document.getElementById('myButton').onclick = join_ym;	
         function join_ym() {
-	 const УУ = document.getElementById("ext").value;
+	 const yy = document.getElementById("ext").value;
 	 const MM =document.getElementById("feedback").value;
 	 document.getElementById('joint').value = УУ+MM;	
-	 alert(document.getElementById('joint').value);
+	 alert('joint');
         }
 		// захватим UI-элементы для работы с ними
 		
