--- a/index2.html
+++ b/index2.html
@@ -25,7 +25,7 @@
 	 const yy = document.getElementById("ext").value;
 	 const MM =document.getElementById("feedback").value;
 	 document.getElementById('joint').value = УУ+MM;	
-	 alert('joint');
+	 alert(document.getElementById('joint').value);
         }
 		// захватим UI-элементы для работы с ними
 		
