--- a/index2.html
+++ b/index2.html
@@ -22,10 +22,10 @@
 	<script>
 	document.getElementById('myButton').onclick = join_ym;	
         function join_ym() {
-	 const yy = document.getElementById("ext").value;
-	 const MM =document.getElementById("feedback").value;
-	 document.getElementById('joint').value = УУ+MM;	
-	 alert(document.getElementById('joint').value);
+	 var yy = document.getElementById("ext").value;
+	 var MM =document.getElementById("feedback").value;
+	 var nn = УУ+MM;	
+	 alert('nn');
         }
 		// захватим UI-элементы для работы с ними
 		
