--- a/index2.html
+++ b/index2.html
@@ -22,10 +22,8 @@
 	<script>
 	document.getElementById('myButton').onclick = join_ym;	
         function join_ym() {
-	 var yy = document.getElementById("ext").value;
-	 var MM =document.getElementById("feedback").value;
-	 var nn = УУ+MM;	
-	 alert('nn');
+	 const yy = document.getElementById("ext").value;	
+	 alert('yy');
         }
 		// захватим UI-элементы для работы с ними
 		
