--- a/index2.html
+++ b/index2.html
@@ -23,7 +23,7 @@
 	document.getElementById('myButton').onclick = join_ym;	
         function join_ym() {
 	 const yy = document.getElementById("ext").value;	
-	 alert('yy');
+	 alert('yy').value;
         }
 		// захватим UI-элементы для работы с ними
 		
