--- a/index2.html
+++ b/index2.html
@@ -22,8 +22,8 @@
 	<script>
 	document.getElementById('myButton').onclick = join_ym;	
         function join_ym() {
-	 const yy = document.getElementById("ext").value;	
-	 alert('yy').value;
+
+	 alert(document.getElementById("ext").value;
         }
 		// захватим UI-элементы для работы с ними
 		
