--- a/index2.html
+++ b/index2.html
@@ -22,8 +22,8 @@
 	<script>
 	document.getElementById('myButton').onclick = join_ym;	
         function join_ym() {
-
-	 alert(document.getElementById("ext").value;
+	 const xx =document.getElementById("ext").value;
+	 alert(xx);
         }
 		// захватим UI-элементы для работы с ними
 		
