--- a/index2.html
+++ b/index2.html
@@ -23,7 +23,8 @@
 	document.getElementById('myButton').onclick = join_ym;	
         function join_ym() {
 	 const xx =document.getElementById("ext").value;
-	 alert(xx);
+	 const yy =document.getElementById("feedback").value;		
+	 alert(xx,yy);
         }
 		// захватим UI-элементы для работы с ними
 		
