--- a/index2.html
+++ b/index2.html
@@ -22,8 +22,9 @@
 	<script>
 	document.getElementById('myButton').onclick = join_ym;	
         function join_ym() {
-	 const xx =document.getElementById("ext").value;
-	 const yy =document.getElementById("feedback").value;		
+	 const xx =document.getElementById("ext");
+	 const yy =document.getElementById("feedback").value;
+	 
 	 alert(xx, yy);
         }
 		// захватим UI-элементы для работы с ними
