--- a/index2.html
+++ b/index2.html
@@ -24,7 +24,7 @@
         function join_ym() {
 	 const xx =document.getElementById("ext").value;
 	 const yy =document.getElementById("feedback").value;
-	 const total=(xx.value+yy.value)
+	 const total=xx+yy
 	 alert(total);
         }
 		// захватим UI-элементы для работы с ними
