--- a/index2.html
+++ b/index2.html
@@ -31,7 +31,7 @@
 		const xx =document.getElementById("ext").value;
 	 	const yy =document.getElementById("feedback").value;
 		const total=xx.concat(" ", yy);
-		const textE1 = document.getElementById(total);
+		const textE1 = document.getElementById("total");
 		const speakEl = document.getElementById('button');
 
 		// перехватим клик по кнопке
