--- a/index2.html
+++ b/index2.html
@@ -32,7 +32,7 @@
 		const xx =document.getElementById("ext").value;
 	 	const yy =document.getElementById("feedback").value;
 		const total=xx.concat(" ", yy);
-		const textE1 =document.getElementById("ext");
+		const textE1 =document.getElementById("ext").value;
 		
 		
 		// перехватим клик по кнопке
