--- a/index2.html
+++ b/index2.html
@@ -20,8 +20,8 @@
 	</form>	
 
 	<script>
-	document.getElementById('myButton').onclick = join_ym;	
-        function join_ym() {
+	#document.getElementById('myButton').onclick = join_ym;	
+        #function join_ym() {
 	 const xx =document.getElementById("ext").value;
 	 const yy =document.getElementById("feedback").value;
 	 const total=xx.concat(" ", yy);
