--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
 		</textarea>
 		<button id="button">Отправить сообщение</button>
 		<input tupe="button" </input>
-		<button onclick="join_ym()">Нажми меня</button>
+		#<button onclick="join_ym()">Нажми меня</button>
                 
 	</form>	
 
