--- a/index2.html
+++ b/index2.html
@@ -26,7 +26,7 @@
 		const xx =document.getElementById("ext").value;
 	 	const yy =document.getElementById("feedback").value;
 		const total=xx.concat(" ", yy);
-		const textE1 =document.getElementById("ext").value;
+		const textE1 =document.getElementById("ext");
 		
 		
 		// перехватим клик по кнопке
