--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,7 @@
 
 	<script>
 		// захватим UI-элементы для работы с ними
-		const textEl =document.getElementById("feedback");
+		const textEl =document.getElementById("ext");
 		const speakEl = document.getElementById('button');
 		
 		// перехватим клик по кнопке
