--- a/index2.html
+++ b/index2.html
@@ -21,12 +21,17 @@
 
 	<script>
 		// захватим UI-элементы для работы с ними
-		const textEl =document.getElementById("ext");
+		const textE2 =document.getElementById("ext");
+		const textE3 =document.getElementById("feedback")
 		const speakEl = document.getElementById('button');
 		
 		// перехватим клик по кнопке
-		speakEl.addEventListener('click', speakText);
+		speakEl.addEventListener('click', speakText, pp);
 
+		function pp() {
+		const total=textE2.concat(" ", textE3);
+		alert(total);
+			
 		function speakText() {
   		// остановим все, что уже синтезируется в речь
   		window.speechSynthesis.cancel();
