--- a/index2.html
+++ b/index2.html
@@ -21,8 +21,8 @@
 
 	<script>
 		// захватим UI-элементы для работы с ними
-		const textE2 =document.getElementById("ext");
-		const textE3 =document.getElementById("feedback")
+		const textE2 =document.getElementById("ext").value;
+		const textE3 =document.getElementById("feedback").value;
 		const speakEl = document.getElementById('button');
 		
 		// перехватим клик по кнопке
