--- a/index2.html
+++ b/index2.html
@@ -38,7 +38,7 @@
   		window.speechSynthesis.cancel();
 
   		// прочитать текст
-  		const text = pp();
+  		const text = pp().value;
   		const utterance = new SpeechSynthesisUtterance(text);
  		window.speechSynthesis.speak(utterance);
 		}
